--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xvt",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "an event-driven terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
@@ -11,6 +11,7 @@
     "@types/node": "^7.0.4"
   },
   "scripts": {
+    "build": "tsc",
     "test": "cd test; tsc; node main; cd -"
   },
   "repository": {
