--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "xvt",
-  "version": "1.0.32",
+  "version": "1.0.34",
   "description": "an event-driven terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
   "dependencies": {
-    "class-validator": "^0.9.1"
+    "class-validator": "^0.9.1",
+    "romanize": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^10.14.4"
