--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xvt",
-  "version": "1.0.34",
-  "description": "an event-driven terminal session handler",
+  "version": "1.1.0",
+  "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
   "dependencies": {
@@ -9,7 +9,8 @@
     "romanize": "^1.1.1"
   },
   "devDependencies": {
-    "@types/node": "^10.14.4"
+    "@types/node": "^10.14.4",
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "build": "tsc",
