--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xvt",
-  "version": "1.1.0",
+  "version": "1.1.1-a",
   "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
