--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xvt",
-  "version": "1.1.1-a",
+  "version": "1.1.2",
   "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.14.4",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.4"
   },
   "scripts": {
     "build": "tsc",
