--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "xvt",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
   "dependencies": {
-    "class-validator": "^0.12.2",
-    "romanize": "^1.1.1"
+    "class-validator": "^0.12.2"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
-    "typescript": "^4.0.3"
+    "@types/node": "^14.14.9",
+    "typescript": "^4.1.2"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "tsc -p ./test --outDir ./test; node ./test/main"
+    "build": "./tsc",
+    "test": "./tsc -p ./test --outDir ./test; node ./test/main"
   },
   "repository": {
     "type": "git",
