--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xvt",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
@@ -11,6 +11,10 @@
     "@types/node": "^14.14.10",
     "typescript": "^4.1.2"
   },
+  "os": [
+    "cros",
+    "linux"
+  ],
   "scripts": {
     "build": "./tsc",
     "test": "./tsc -p ./test --outDir ./test; node ./test/main"
