--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@theflyingape/xvt",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "description": "an asynchronous terminal session handler",
   "main": "./xvt.js",
   "types": "./xvt.d.ts",
-  "dependencies": {
-    "class-validator": "^0.12.2"
-  },
   "devDependencies": {
     "@types/node": "^14.14.17",
     "typescript": "^4.1.2"
@@ -17,7 +14,7 @@
   ],
   "scripts": {
     "build": "./tsc",
-    "demo": "./tsc -p ./test --outDir ./test; node ./test/main",
+    "demo": "./tsc -p ./demo --outDir ./demo; node ./demo/index",
     "test": "exit 0"
   },
   "repository": {
