--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,18 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2016",
+    "target": "ES2018",
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "outDir": ".",
+    "outDir": "..",
     "removeComments": true,
     "preserveConstEnums": true,
+    "pretty": true,
     "sourceMap": true
   },
   "exclude": [
 	  "node_modules",
-  ],
-  "include": [
-	  "src/*"
   ]
 }
