--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@theflyingape/xvt",
-  "version": "1.4.0",
+  "name": "xvt",
+  "version": "1.4.1",
   "description": "an asynchronous terminal session handler",
   "os": [
     "cros",
@@ -9,10 +9,12 @@
   "main": "./lib/xvt.js",
   "types": "./lib/xvt.d.ts",
   "devDependencies": {
-    "@types/node": "^14.14.17",
-    "typescript": "^4.1.2"
+    "@types/node": "^14.14.22",
+    "typescript": "^4.1.3"
   },
-  "files": [ "lib" ],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "./tsc",
     "demo": "./tsc -p ./demo --outDir ./demo; node ./demo/index",
