--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theflyingape/xvt",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "an asynchronous terminal session handler",
   "os": [
     "cros",
@@ -9,8 +9,8 @@
   "main": "./lib/xvt.js",
   "types": "./lib/xvt.d.ts",
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "typescript": "^4.1.3"
+    "@types/node": "^14.14.40",
+    "typescript": "^4.2.4"
   },
   "files": [
     "lib"
@@ -19,6 +19,10 @@
     "build": "./tsc",
     "demo": "./tsc -p ./demo --outDir ./demo; node ./demo/index",
     "test": "exit 0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "repository": {
     "type": "git",
