--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theflyingape/xvt",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "description": "an asynchronous terminal session handler",
   "author": "Robert Hurst <theflyingape@gmail.com>",
   "homepage": "https://robert.hurst-ri.us",
@@ -21,12 +21,13 @@
   "main": "lib/xvt.js",
   "types": "lib/xvt.d.ts",
   "devDependencies": {
-    "@types/node": "^15.6.1",
+    "@types/node": "^15.12.2",
     "typescript": "^4.3.2"
   },
   "bugs": {
     "url": "https://github.com/theflyingape/xvt/issues"
   },
+  "private": false,
   "publishConfig": {
     "access": "public",
     "registry": "https://npm.pkg.github.com"
