--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@theflyingape/xvt",
-  "version": "1.4.8",
+  "version": "1.5.0",
   "description": "an asynchronous terminal session handler",
   "author": "Robert Hurst <theflyingape@gmail.com>",
   "homepage": "https://robert.hurst-ri.us",
   "keywords": [
     "ansi",
+    "console",
     "emulation",
     "forms",
+    "linux",
     "terminal"
   ],
   "license": "MIT",
@@ -21,8 +23,8 @@
   "main": "lib/xvt.js",
   "types": "lib/xvt.d.ts",
   "devDependencies": {
-    "@types/node": "^15.12.2",
-    "typescript": "^4.3.2"
+    "@types/node": "^15.14.9",
+    "typescript": "^4.7.4"
   },
   "bugs": {
     "url": "https://github.com/theflyingape/xvt/issues"
